--- a/src/main/webapp/pages/css/unicorn.login.css
+++ b/src/main/webapp/pages/css/unicorn.login.css
@@ -8,21 +8,34 @@ html, body {
     overflow:hidden;
 }
 body {
-	background-color: #444444;
-	background-image: -webkit-gradient(linear, 0 0%, 0 100%, from(#555555), to(#111111));
-	background-image: -webkit-linear-gradient(top, #555555 0%, #111111 100%);
-    background-image: -moz-linear-gradient(top, #555555 0%, #111111 100%);
-    background-image: -ms-linear-gradient(top, #555555 0%, #111111 100%);
-    background-image: -o-linear-gradient(top, #555555 0%, #111111 100%);
-    background-image: linear-gradient(top, #555555 0%, #111111 100%);
-    padding: 0;
-    margin: 0;
+    /*background-color: #444444;*/
+    /*background-image: -webkit-gradient(linear, 0 0%, 0 100%, from(#555555), to(#111111));*/
+    /*background-image: -webkit-linear-gradient(top, #555555 0%, #111111 100%);*/
+    /*background-image: -moz-linear-gradient(top, #555555 0%, #111111 100%);*/
+    /*background-image: -ms-linear-gradient(top, #555555 0%, #111111 100%);*/
+    /*background-image: -o-linear-gradient(top, #555555 0%, #111111 100%);*/
+    /*background-image: linear-gradient(top, #555555 0%, #111111 100%);*/
+    background: url('../img/background.jpg') center ;
+    background-size:100% 100%;
 }
-
+#head {
+    margin-top: 20px;
+    text-align: right;
+    min-height: 50px;
+    background: rgba(255,255,255,0.2);
+}
+#head a {
+    position: relative;
+    font-size: 15px;
+    color: #ffffff;
+    margin-top: 50%;
+    margin-right: 20px ;
+}
 #logo, #loginbox {
     width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+    min-height: 230px;
+    height:auto;
     position: relative;
 }
 #logo {
@@ -34,17 +47,19 @@ body {
     display: block;
 }
 #loginbox {
-    height: 196px;
-	background: #ffffff;
+    min-width: 100px;
+	background: rgba(255,255,255,0.5);;
+    /*opacity:0.9;*/
     box-shadow: 0 0 4px #000000;
     border-radius: 7px;
     overflow: hidden !important;
+    position: relative;
     text-align: center;
-    position: relative;   
 }
 
 #loginbox form{
-	width:100%;
+
+    width:100%;
 	height:100%;
 	position:absolute;
 	top:0;
@@ -70,6 +85,8 @@ body {
 	z-index: 100;
 	opacity: 0;
     display:none;
+
+    height: auto;
 }
 
 #loginbox form#recoverform .form-actions {
@@ -78,6 +95,7 @@ body {
 
 #loginbox form#recoverform .control-group {
 	margin: 23px 0;
+
 }
 
 .form-vertical, .form-actions {
@@ -86,6 +104,6 @@ body {
 
 @media (max-width: 480px){
     #logo, #loginbox {
-        width: 80%; 
-    }    
+        width: 80%;
+    }
 }
