--- a/src/main/webapp/pages/css/unicorn.main.css
+++ b/src/main/webapp/pages/css/unicorn.main.css
@@ -621,7 +621,7 @@ a:hover {
 
 /* Widgets */
 .widget-box {
-    background: none repeat scroll 0 0 #F9F9F9;
+    background: none repeat scroll 0 0 #FFFFFF;
     border-top: 1px solid #CDCDCD;
     border-left: 1px solid #CDCDCD;
     border-right: 1px solid #CDCDCD;
@@ -887,8 +887,8 @@ ul#icons li {
     margin-top: 40px;
 }
 .amount-word span {
-    color: #5476A6;
-    font-weight: bold;
+    /*color: #5476A6;*/
+    /*font-weight: bold;*/
     padding-left: 20px;
 }
 .panel-left {
