--- a/src/main/webapp/pages/css/bootstrap.css
+++ b/src/main/webapp/pages/css/bootstrap.css
@@ -5193,6 +5193,7 @@ input[type="submit"].btn.btn-mini {
   left: 50%;
   z-index: 1050;
   width: 560px;
+  max-width: 700px;
   margin-left: -280px;
   background-color: #ffffff;
   border: 1px solid #999;
@@ -5238,7 +5239,6 @@ input[type="submit"].btn.btn-mini {
 
 .modal-body {
   position: relative;
-  max-height: 400px;
   padding: 15px;
   overflow-y: auto;
 }
