--- a/src/main/webapp/pages/css/bootstrap.css
+++ b/src/main/webapp/pages/css/bootstrap.css
@@ -5240,6 +5240,7 @@ input[type="submit"].btn.btn-mini {
 .modal-body {
   position: relative;
   padding: 15px;
+  max-height: 450px;
   overflow-y: auto;
 }
 
