--- a/src/main/webapp/pages/css/bootstrap-3.3.7.css
+++ b/src/main/webapp/pages/css/bootstrap-3.3.7.css
@@ -4165,7 +4165,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 }
 .navbar {
   position: relative;
-  min-height: 50px;
+  /*min-height: 50px;*/
   margin-bottom: 20px;
   border: 1px solid transparent;
 }
@@ -4590,7 +4590,7 @@ fieldset[disabled] .navbar-default .btn-link:focus {
 }
 .navbar-inverse {
   background-color: #222;
-  border-color: #080808;
+  /*border-color: #080808;*/
 }
 .navbar-inverse .navbar-brand {
   color: #9d9d9d;
